[gd_scene load_steps=3 format=3 uid="uid://da0kxsrg2gb20"]

[ext_resource type="Script" uid="uid://cm3dmpv6ar0xu" path="res://scripts/enemy_spawner.gd" id="1_wimyj"]
[ext_resource type="PackedScene" uid="uid://btwls2defev6t" path="res://scenes/Enemy.tscn" id="2_ks4g3"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_wimyj")
enemy_scene = ExtResource("2_ks4g3")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
